Fixed bug with consecutive sequences. Also, various other fixes.